Till och med uppgift 7 klar

--- a/ansible_lab/files/index.html
+++ b/ansible_lab/files/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Hello Nackademin!</title>
+    <title>Jennys specialsida</title>
   </head>
   <body>
-    <h1>Hello Nackademin!</h1>
-    <p>This is a totally awesome web page</p>
-    <p>This page has been uploaded with <a href="https://docs.ansible.com/">Ansible</a>!</p>
+    <h1>Hej Par!</h1>
+    <p>Detta ar min lilla sida.</p>
+    <p>Den har jag fatt upp med <a href="https://docs.ansible.com/">Ansible</a>!</p>
   </body>
 </html>
